--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@ This does not occur when the LWRP (Light Weight Render Pipeline) however as conc
 One of the core game mechanics is the ability to posses animals. One of the animals you can posses is a bird, and will be 
 able to recon the surrounding area a bird is patrolling via the perspective of the bird. 
 <br></br>
+<img src="resources/img/bird.png" alt="ERROR NO IMG" height="400" width="300">
+<br></br>
 This was implemented was via a path following script that was attached to the bird entity. This script also renders waypoints that can be place and arranged manually 
 to create a fixed repeating flight path for the bird to follow, this will allow visibility of the surrounding area.
 <br></br>
