--- a/index.html
+++ b/index.html
@@ -96,12 +96,15 @@ This does not occur when the LWRP (Light Weight Render Pipeline) however as conc
 One of the core game mechanics is the ability to posses animals. One of the animals you can posses is a bird, and will be 
 able to recon the surrounding area a bird is patrolling via the perspective of the bird. 
 <br></br>
-<img src="resources/img/bird.png" alt="ERROR NO IMG" height="300" width="400">
-<br></br>
 This was implemented was via a path following script that was attached to the bird entity. This script also renders waypoints that can be place and arranged manually 
 to create a fixed repeating flight path for the bird to follow, this will allow visibility of the surrounding area.
 <br></br>
 <img src="resources/img/crow.png" alt="ERROR NO IMG" height="400" width="300">
+<br></br>
+<video width="720" height="480" controls>
+  <source src="resources/img/bird.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 </p>
 <b>Render Layers Unity</b>
 <p>
@@ -196,6 +199,7 @@ shape will be added to the envioment and added to the scene heirachy.
 </p>
 <b>Reflection</b>
 	<br></br>
+	Due to the lockdown, we weren't able to communcicate by holding meetings or debriefs. Teams was the only form of 
 <b>Personal Statement</b>
 <p>
 </p>
