--- a/index.html
+++ b/index.html
@@ -87,9 +87,13 @@ behaviour of a current or flowing water.
 <br></br>
 <img src="resources/img/live.png" alt="ERROR NO IMG" height="300" width="550">
 <br></br>
-Issues: Due to Skin using the HDRP (High Definition Render Pipeline) there is a rendering issue with the water as it is effected by some form of culling based on player location.
-This does not occur when the LWRP (Light Weight Render Pipeline) however as concluded by my own testing and consultation by previous Skin developer, Jordan Dargaville.
+Issues: Due to Skin using HDRP (High Definition Render Pipeline) there is a rendering issue with the water as it is effected by some form of culling based on player location.
+This does not occur when using LWRP (Light Weight Render Pipeline) however as concluded by my own testing and consultation by previous Skin developer, Jordan Dargaville.
 <br></br>
+<video width="720" height="480" controls>
+  <source src="resources/img/water.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 </p>
 <b>AI Path Following</b>
 <p>
@@ -143,7 +147,10 @@ this triggers a transitition to play the walking animation. Based on the value o
 <br></br>
 <a href="https://www.mixamo.com/">Animation Source</a>
 <br></br>
-
+<video width="720" height="480" controls>
+  <source src="resources/img/anim.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 
 </p>
 <b>Pro Builder / Pro Grid</b>
