--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@ shape will be added to the envioment and added to the scene heirachy.
 	developments.
 	<br></br>
 	<img src="resources/img/team2.png" alt="ERROR NO IMG" height="450" width="350">
-	
 </p>
-<b>Reflection</b>
-	
-	
+<b>Reflection</b>	
 <p>
-Due to the lockdown, we weren't able to communcicate by holding meetings or debriefs. Teams was the only form of 
+Due to the lockdown, we weren't able to communcicate by holding meetings or debriefs. Teams was the only form of communcation we had available. Though Teams proves to provide 
+an easy enviroment to communicate and keep development moving.
+<br></br>
+<img src="resources/img/teams.png" alt="ERROR NO IMG" height="167" width="700">
 </p>
   <!-- End Contact Section -->
   </div>
