--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   Issues: Due to Skin using HDRP (High Definition Render Pipeline) there is a rendering issue with the water as it is effected by some form of culling based on player location.
   This does not occur when using LWRP (Light Weight Render Pipeline) however as concluded by my own testing and consultation by previous Skin developer, Jordan Dargaville.
     <br></br>
-  <img src="resources/img/watermap3.png" alt="ERROR NO IMG" height="300" width="550">
+  <img src="resources/img/watermap3.png" class="w3-round" alt="ERROR NO IMG" height="300" width="550">
     <br></br>
   <img src="resources/img/watermap2.png" alt="ERROR NO IMG" height="300" width="550">
     <br></br>
