--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <br></br>
   <img src="resources/img/watermap3.png" class="w3-round" alt="ERROR NO IMG" height="300" width="550">
     <br></br>
-  <img src="resources/img/watermap2.png" alt="ERROR NO IMG" height="300" width="550">
+  <img src="resources/img/watermap2.png" class="w3-round" alt="ERROR NO IMG" height="300" width="550">
     <br></br>
-  <img src="resources/img/live.png" alt="ERROR NO IMG" height="300" width="550">
+  <img src="resources/img/live.png" class="w3-round" alt="ERROR NO IMG" height="300" width="550">
     <br></br>
   <video width="720" height="480" controls>
     <source src="resources/img/water.mp4" type="video/mp4">
@@ -100,7 +100,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   This was implemented was via a path following script that was attached to the bird entity. This script also renders waypoints that can be place and arranged manually 
   to create a fixed repeating flight path for the bird to follow, this will allow visibility of the surrounding area.
     <br></br>
-  <img src="resources/img/crow.png" alt="ERROR NO IMG" height="400" width="300">
+  <img src="resources/img/crow.png" class="w3-round" alt="ERROR NO IMG" height="400" width="300">
     <br></br>
   <video width="720" height="480" controls>
   <source src="resources/img/bird.mp4" type="video/mp4">
@@ -143,11 +143,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   script handles user mouse input and based on that information moves the player camera, the clamp restricts the player from looking too far up or down, vertically. The movement script 
   controls the players movement. For example, if the "W" key is pressed the player character will walk forward in-game based on the players camera perspective.
     <br></br>
-  <img src="resources/img/controller.png" alt="ERROR NO IMG" height="500" width="200">
+  <img src="resources/img/controller.png" class="w3-round" alt="ERROR NO IMG" height="500" width="200">
     <br></br>
-  <img src="resources/img/mouse.png" alt="ERROR NO IMG" height="300" width="350">
+  <img src="resources/img/mouse.png" class="w3-round" alt="ERROR NO IMG" height="300" width="350">
     <br></br>
-  <img src="resources/img/movement.png" alt="ERROR NO IMG" height="300" width="550">
+  <img src="resources/img/movement.png" class="w3-round" alt="ERROR NO IMG" height="300" width="550">
 </p>
 <b>Animation</b>
 <p> 
@@ -159,10 +159,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   If the player is walking the isWalking statement is set to true,
   this triggers a transitition to play the walking animation. Based on the value of the x and z-axis the direction of the animation will determined and result in directional animation.
     <br></br>
-  <img src="resources/img/fps3.png" alt="ERROR NO IMG" height="300" width="500">
+  <img src="resources/img/fps3.png" class="w3-round" alt="ERROR NO IMG" height="300" width="500">
     <br></br>
-  <img src="resources/img/fps.png" alt="ERROR NO IMG" height="300" width="250">
-  <img src="resources/img/fps2.png" alt="ERROR NO IMG" height="300" width="250">
+  <img src="resources/img/fps.png" class="w3-round" alt="ERROR NO IMG" height="300" width="250">
+  <img src="resources/img/fps2.png" class="w3-round" alt="ERROR NO IMG" height="300" width="250">
     <br></br>
   <video width="720" height="480" controls>
   <source src="resources/img/anim.mp4" type="video/mp4">
@@ -175,7 +175,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   adjustment. These tools are technically two seperate entities but when both installed work together as Pro Grid adds a grid placement for everything within the scene with adjustable
   snapping, while Pro Builder allows for the addition and manipulation of new or existing objects in the scene.
     <br></br>
-  <img src="resources/img/builder.png" alt="ERROR NO IMG" height="400" width="700">
+  <img src="resources/img/builder.png" class="w3-round" alt="ERROR NO IMG" height="400" width="700">
     <br></br>
   To use Pro Grid within the scene enviroment you will notice additional elements to the scene interface to the left. You can set the snapping increment and 
   the rendered grid (x, y or z-axis).
@@ -183,7 +183,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   Once setup is complete and Pro Grid and Pro Builder are both installed, You can use the Pro Builder menu to create new shapes and related aspects such as the material and UV settings.
   These tools make for fast construction of scenes for testing and implementation. 
     <br></br>
-  <img src="resources/img/builder2.png" alt="ERROR NO IMG" height="300" width="250">
+  <img src="resources/img/builder2.png" class="w3-round" alt="ERROR NO IMG" height="300" width="250">
     <br></br>
   Adding new shapes is done by selecting new shape or opening the shape tool menu and then selecting a shape style and the dimensions, once finalised click the "Build" button and the 
   shape will be added to the envioment and added to the scene heirachy. 
@@ -207,14 +207,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	My main line of communication was with Adon as I would mainly consult Adon for approval of what next for me to research and implement into Skin or to update on current
 	developments.
 	  <br></br>
-	<img src="resources/img/team2.png" alt="ERROR NO IMG" height="450" width="350">
+	<img src="resources/img/team2.png" class="w3-round" alt="ERROR NO IMG" height="450" width="350">
 </p>
 <b>Reflection</b>	
 <p>
   Due to the lockdown, we weren't able to communcicate by holding meetings or debriefs. Teams was the only form of communcation we had available. Though Teams proves to provide 
   an easy enviroment to communicate and keep development moving.
     <br></br>
-<img src="resources/img/teams.png" alt="ERROR NO IMG" height="167" width="700">
+<img src="resources/img/teams.png" class="w3-round" alt="ERROR NO IMG" height="167" width="700">
 </p>
   <!-- End Professional Section -->
   </div>
