--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <br></br>
   NOTE: Simplest way to acquire a Waterbump Texture Map is by acquiring one off the internet, a simple google search will bring up multiple choices. 
     <br></br>
+  The most crucial part, the shader graph is complex and simple at the same time. Following the steps provided in the Tutorial
+  I referred to above it is simple to replicate however if I were to explain step-by-step we would be here all day. In a nutshell each component allows 
+  for additional properties to be added to the actual shader graph that will render in the game including animation for the current flow of the water.
+  <br></br>
   Once all components are created place a plane asset into the enviroment and apply the shader graph to it, Once applied the configuration 
   options will become available to adjust the water textures behaviours like colors and the speed at which the texture pans across the plane, this emulates the 
   behaviour of a current or flowing water.
