--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   or cameras within the enviroment. To correct this, I used the Layer tool and created a new layer to associate player viewable only assets, I have listed the process below.
 <br></br>
 <ol>
-  <li>Create a new layer, click layer "add new layer"</li>
-  <li>Select FPS arms and put them into the layer created "example"</li>
-  <li>Remove the "example" layer from the cull list for every camera aside from the player camera</li>
+  <li>Create a new layer, click layer "add new layer" / "edit layers"</li>
+  <li>Select FPS arms and put them into the layer created "Player View"</li>
+  <li>Remove the "Player View" layer from the cull list for every camera aside from the player camera</li>
 </ol>
+  <img src="resources/img/layer.png" class="w3-round" alt="ERROR NO IMG" height="400" width="300">
+    <br></br>
 </p>
 <br></br>
 <h2><u><b>PROJECT DARK</b></u></h2>
