--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ able to recon the surrounding area a bird is patrolling via the perspective of t
 This was implemented was via a path following script that was attached to the bird entity. This script also renders waypoints that can be place and arranged manually 
 to create a fixed repeating flight path for the bird to follow, this will allow visibility of the surrounding area.
 <br></br>
+<img src="resources/img/birdscript.png" alt="ERROR NO IMG" height="400" width="300">
+<br></br>
 <img src="resources/img/crow.png" alt="ERROR NO IMG" height="400" width="300">
 <br></br>
 <video width="720" height="480" controls>
