--- a/index.html
+++ b/index.html
@@ -101,12 +101,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 One of the core game mechanics is the ability to posses animals. One of the animals you can posses is a bird, and will be 
 able to recon the surrounding area a bird is patrolling via the perspective of the bird. 
 <br></br>
-This was implemented was via a path following script that was attached to the bird entity. This script also renders waypoints that can be place and arranged manually 
-to create a fixed repeating flight path for the bird to follow, this will allow visibility of the surrounding area.
+This was implemented was via a path following script that was attached to the bird entity. This script renders waypoints that can be place and arranged manually 
+to create a fixed repeating flight path for the bird to follow, this will allow visibility of the surrounding area. The waypoints can then be 
+ordered in the inspector UI for the birds properties under the path section you can specify the amount of points in the size variable and then click and drag 
+the waypoints into the elements section. 
 <br></br>
-<img src="resources/img/birdscript.png" alt="ERROR NO IMG" height="400" width="300">
+<img src="resources/img/birdscript.png" class="w3-round" alt="ERROR NO IMG" height="400" width="300">
 <br></br>
-<img src="resources/img/crow.png" alt="ERROR NO IMG" height="400" width="300">
+<img src="resources/img/crow.png" class="w3-round" alt="ERROR NO IMG" height="400" width="300">
 <br></br>
 <video width="720" height="480" controls>
   <source src="resources/img/bird.mp4" type="video/mp4">
