--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@ the waypoints into the elements section.
   Adding new shapes is done by selecting new shape or opening the shape tool menu and then selecting a shape style and the dimensions, once finalised click the "Build" button and the 
   shape will be added to the envioment and added to the scene heirachy. 
 </p>
+<b>Reflection</b>	
+<p>
+  Despite the restrictions of lockdown and remote learning, I managed to maintain a steady pace of workflow that through documentation logged in this portfolio conveys
+  I maintained a acceptable work standard while pushing for more technical profiency and tackling new features and bugs. I am impressed with how much I managed to develop for my own 
+  personal project, animation, controls, etc. 
+  <br></br>
+  Developing independently during lockdown allowed me freedoms to explore and research mechanics and features I wanted to develop more profiecieny in, through this process
+  I began to develop a narrative for my projects story. This allowed me to develop ideas and implement them into mechanics and features.
+</p>
   <!-- End Technical Section -->
   </div>
   <!-- Professional -->
