--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@ the waypoints into the elements section.
   personal project, animation, controls, etc. 
   <br></br>
   Developing independently during lockdown allowed me freedoms to explore and research mechanics and features I wanted to develop more profiecieny in, through this process
-  I began to develop a narrative for my projects story. This allowed me to develop ideas and implement them into mechanics and features.
+  I began to develop a narrative for my projects story.
+  <br></br>
+  This allowed me to develop ideas and implement them into mechanics and features.
 </p>
   <!-- End Technical Section -->
   </div>
